fixed section and button overlapping

--- a/styles.css
+++ b/styles.css
@@ -255,7 +255,7 @@ section span {
         height: 100vh;
     }
     section{
-        margin-top: 60px;
+        margin-top: 140px;
         float: left; 
         width: 50%;
     }
